egress/http/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-http-forwarder
spec:
  hosts:
  - "*"
  gateways:
  - egress-http
  http:
  - match:
    - port: 80
      uri:
        prefix: /
    route:
    - destination:
        host: egress-http-forwarder.local
        port:
          number: 80
