egress/http/sample-https.yaml

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: https-entries
spec:
  hosts:
  - api.tlp.tencent.com
  - www.qq.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS


---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-https-ip-through-egress-gateway
spec:
  hosts:
  - "api.tlp.tencent.com"
  - "www.qq.com"
  gateways:
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - "api.tlp.tencent.com"
      - "www.qq.com"
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
